eShopMicroService/apps/overlays/basket/dev/basket-api-blue-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basket-api
  labels:
    app: basket-api
    version: blue
spec:
  replicas: 2
  selector:
    matchLabels:
      app: basket-api
      version: blue
  template:
    metadata:
      labels:
        app: basket-api
        version: blue
    spec:
      containers:
        - name: basket-api
          image: eshopmicroserviceacr.azurecr.io/basketapi:937
