eShopMicroService/apps/overlays/basket/dev/basket-api-green-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: basket-api
  labels:
    app: basket-api
    version: green
spec:
  replicas: 2
  selector:
    matchLabels:
      app: basket-api
      version: green
  template:
    metadata:
      labels:
        app: basket-api
        version: green
    spec:
      containers:
        - name: basket-api
          image: myregistry.azurecr.io/basket-api:v1.1.0
