eShopMicroService/apps/overlays/basket/dev/destinationrule.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: basket-api
spec:
  host: basket-api
  subsets:
    - name: blue
      labels:
        version: blue
    - name: green
      labels:
        version: green
