eShopMicroService/apps/overlays/basket/dev/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: basket-api
spec:
  hosts:
    - basket.example.com
  http:
    - route:
        - destination:
            host: basket-api
            subset: blue
          weight: 100
        - destination:
            host: basket-api
            subset: green
          weight: 0
